--- a/src/templates/list.html
+++ b/src/templates/list.html
@@ -13,7 +13,7 @@
 <body>
 
     <nav class="nav-wraper">
-        <a href="#" class="brand-logo" style="font-size: 20px; margin-left: 10px;">Home</a>
+        <a href="/" class="brand-logo" style="font-size: 20px; margin-left: 10px;">Home</a>
         <a href="#" class="sidenav-trigger" data-target="mobile-links">
             <i class="material-icons">menu</i>
         </a>
