--- a/src/templates/encrypted.html
+++ b/src/templates/encrypted.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" href="encrypted_style.css">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VM Encrypted</title>
+    <title>VM Encrypted - VM Criptata</title>
+    <link rel="shortcut icon" href="###"> <!--Insert favicon here - inserisci qui la favicon-->
 </head>
+<header>
+    <table>
+        <tr>
+            <th><img width="75" src="logo.png" alt="VMwareRemote_logo"></th>
+            <th><h1>&nbsp;&nbsp;&nbsp;VM Encrypted</h1></th>
+        </tr>
+    </table>
+</header>
 <body>
-    <h1>The VM you tried to access is encrypted and this tool doesn't have the capabilities to handle it at the moment. <br> Sorry for the inconvenience.</h1>
+    <h2 align="center">The VM you tried to access is encrypted and this tool doesn't have the capabilities to handle it at the moment. <br> Sorry for the inconvenience.</h2>
     <br>
     <h3>VM Path: "{{vmPath}}"</h3>
 </body>
+<footer>
+    <p>&copy; Cikappa2904; GPL-3.0 LICENCE</p>
+</footer>
 </html>
