--- a/src/templates/specs.html
+++ b/src/templates/specs.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="it">
+    <link rel="stylesheet" href="specs_style.css">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="###"> <!--Insert favicon icon - Inserisci qui la favicon-->
 </head>
 <script>
     document.title = "{{vmName}}";
@@ -13,7 +15,6 @@
     }
 </script>
 <body>
-    
     <ul id="specsUL">
         <li id="cpuSpecs"></li>
         <li id="ramSpecs"></li>
